objects/vlocity_cmt__OmniScriptDefinition__c.object
<CustomObject>
    <description>Represents the compiled version of a Vlocity OmniScript (or portion thereof) which is ready to be delivered to the browser for execution in a user&apos;s browser. This representation is assembled from the OmniScript and its child Element records.</description>
    <fields>
        <fullName>vlocity_cmt__Content__c</fullName>
        <label>Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OmniScriptId__c</fullName>
        <label>Vlocity OmniScript</label>
        <referenceTo>vlocity_cmt__OmniScript__c</referenceTo>
        <relationshipLabel>OmniScript Definitions</relationshipLabel>
        <relationshipName>OmniScriptDefinitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vlocity OmniScript Compiled Definition</label>
    <nameField>
        <label>OmniScript Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity OmniScript Compiled Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>